Fixed portfolio.html with modicfications to style.css so it will display properly on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,15 +244,46 @@ form {
 .main-text{
     margin-top: 40px;
     width: 90%;
-    height: 90%;
+    height: 100%;
     padding-bottom: 15px;
+    position: ralative;
 }
 .image-left {
-    position: absolute;
+    position: ralative;
+    /* position: absolute; */
     left: 90px;
-    top: 200px;
+    /* top: 200px; */
     margin-bottom: 30x;
 }
-
-
+.image-right {
+    position: ralative;
+    /* position: absolute; */
+    left: 90px;
+    top: 25px;px;
+    margin-bottom: 30x;
+}
+.text-left {
+    padding-top: 5px;
+    text-align: center;
+    color: white;
+    position: relative;
+    top: -57px;
+    left: 94px;
+    height: 25px;
+    width: 300px;
+    background-color: #00183C;
+    opacity: .7;
+}
+.text-right {
+    padding-top: 5px;
+    text-align: center;
+    color: white;
+    position: relative;
+    top: -58px;
+    left: 92px;
+    height: 25px;
+    width: 300px;
+    background-color: #00183C;
+    opacity: .7;
+}
 }
